# sc2_coop_info

./: .gitignore  AGENTS.md  Cargo.toml  README.ko.md  README.kr.md  README.md
s2coop-analyzer/: Cargo.toml
s2coop-analyzer/data/: amon_player_ids.json  bonus_objectives.json  cached_mutators.json  co_mastery_upgrades.json  commander_mastery.json  hfts_units.json  horners_units.json  map_names.json  mc_units.json  mutator_brutal_plus.json  mutator_ids.json  mutator_points.json  mutators.json  mutators_exclude_ids.json  outlaws.json  prestige_names.json  prestige_upgrades.json  replay_analysis_data.json  royal_guards.json  tus_units.json  tychus_base_upgrades.json  tychus_ultimate_upgrades.json  unit_add_kills_to.json  unit_base_costs.json  unit_comp_dict.json  unit_names.json  unit_translation_data.json  units_in_waves.json  units_to_stats.json  weekly_mutation_date.json  weekly_mutations.json
s2coop-analyzer/src/: cache_overall_stats_detailed_analysis.rs  cache_overall_stats_generator.rs  cli.rs  detailed_replay_analysis.rs  dictionary_data.rs  lib.rs  main.rs  replay_event_handlers.rs  sc2_dictionary_data.rs  stats_counter_core.rs  stats_counter_math.rs  tauri_replay_analysis_impl.rs  weekly_mutation_manager.rs
s2coop-analyzer/src/tests/: cache_overall_stats_generator.rs  (+2 more)
s2coop-analyzer/tests/: cache_overall_stats_candidate_filtering.rs  cache_overall_stats_detailed_overlay.rs  cache_overall_stats_format_parity.rs  cache_overall_stats_generator.rs  cache_overall_stats_parallel.rs  cache_overall_stats_pretty.rs  cache_overall_stats_recent_files.rs  cache_overall_stats_simple.rs  cli.rs  detailed_replay_analysis.rs  dictionary_data_handlers.rs  generate_cache_logging.rs  mutator_brutal_plus_data.rs  part_and_parcel_parts_icon.rs  replay_analysis_detailed_report.rs  replay_analysis_malwarfare_weekly.rs  replay_analysis_rust_only_smoke.rs  replay_analysis_schema_parity.rs  replay_game_speed_fallback.rs  sc2_dictionary_data.rs  weekly_mutation_manager.rs
s2protocol-port/: Cargo.toml
s2protocol-port/protocols/: protocols.json
s2protocol-port/src/: bitstream.rs  decoder.rs  error.rs  events.rs  lib.rs  protocol.rs  replay.rs  replay_data.rs  replay_format.rs  unit_tag.rs  value.rs
s2protocol-port/tests/: ordered_events.rs  parse_file_modes.rs  replay_data_defaults.rs  tracker_events_real_replay.rs
tauri-overlay/: .prettierignore  Cargo.toml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tests.json  vite.config.ts
tauri-overlay/src/: main.tsx
tauri-overlay/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
tauri-overlay/tests/: config-games-filters.spec.ts  config-games-layout-parity.spec.ts  config-language.spec.ts  config-mastery-language.spec.ts  config-pagination.spec.ts  config-route.spec.ts  config-show-charts.spec.ts  config-statistics-language.spec.ts  config-theme.spec.ts  config-weeklies-language.spec.ts  config-weeklies-order.spec.ts  global.d.ts  overlay-expiry-fade.spec.ts  overlay-expiry.spec.ts  overlay-hide-fade.spec.ts  overlay-killbar-transition.spec.ts  overlay-language-height.spec.ts  overlay-levels.spec.ts  overlay-mutators.spec.ts  overlay-portrait-layout.spec.ts  overlay-prestige-language.spec.ts  overlay-session-stats.spec.ts  overlay-show-charts.spec.ts  overlay-unit-table.spec.ts  performance-overlay.spec.ts  replay-visual-interpolation.spec.ts
(+146 files in other folders)
