[workspace]
members = ["s2coop-analyzer", "s2protocol-port", "tauri-overlay/src-tauri"]
resolver = "3"

[workspace.dependencies]
s2coop-analyzer = { path = "s2coop-analyzer" }
s2protocol-port = { path = "s2protocol-port" }

[profile.dev.package.s2coop-analyzer]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 16

[profile.dev.package.s2protocol-port]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 16
