[package]
name = "s2coop-analyzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "s2coop_analyzer"
crate-type = ["rlib"]

[[bin]]
name = "s2coop-analyzer-cli"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
s2protocol-port = { path = "../s2protocol-port" }
md5 = "0.7"
indexmap = { version = "2", features = ["serde"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
walkdir = "2"
struct_field_names = "0.2.1"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
