[workspace]
members = ["src-tauri"]
resolver = "2"

[profile.dev.package.s2coop-analyzer]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 16

[profile.dev.package.s2protocol-port]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 16
